--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.05MB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-226.0KB/s(Youtube:不良林), server: ahdaeph8.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: ahdaeph8.com}}
-  - {name: 波兰-601.5KB/s(Youtube:不良林), server: 217.30.10.64, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
-  - {name: 🇨🇳 中国-9.25MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.77MB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s1.upyun.online, skip-cert-verify: true}
-  - {name: 波兰-1.23MB/s(Youtube:不良林), server: 217.30.10.64, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 波兰-1.21MB/s(Youtube:不良林), server: 217.30.10.64, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
-  - {name: 保加利亚-403.4KB/s(Youtube:不良林), server: 213.183.63.218, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇷🇺 俄罗斯联邦-310.2KB/s(Youtube:不良林), server: 213.183.53.208, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇯🇵 日本-5.47MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-307.1KB/s(Youtube:不良林), server: 213.183.53.208, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 🇭🇰 香港-4.13MB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.27MB/s(Youtube:不良林), server: sunhaoduo.tk, port: 443, type: trojan, password: b61d3b3c, sni: sunhaoduo.tk, skip-cert-verify: true}
+  - {name: 波兰-219.5KB/s(Youtube:不良林), server: 217.30.10.64, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 波兰-189.8KB/s(Youtube:不良林), server: 217.30.10.64, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
+  - {name: 保加利亚-184.8KB/s(Youtube:不良林), server: 213.183.63.218, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇷🇺 俄罗斯联邦-298.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
   - {name: 🇺🇸 美国-480.5KB/s(Youtube:不良林), server: charge.starspace.link, port: 443, type: trojan, password: 8UnS7eSMi8OFKfje, sni: charge.starspace.link, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-226.0KB/s(Youtube:不良林)
-      - 波兰-601.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
-      - 波兰-1.21MB/s(Youtube:不良林)
-      - 保加利亚-403.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-310.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-307.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 波兰-219.5KB/s(Youtube:不良林)
+      - 波兰-189.8KB/s(Youtube:不良林)
+      - 保加利亚-184.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-298.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-480.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-226.0KB/s(Youtube:不良林)
-      - 波兰-601.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
-      - 波兰-1.21MB/s(Youtube:不良林)
-      - 保加利亚-403.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-310.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-307.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 波兰-219.5KB/s(Youtube:不良林)
+      - 波兰-189.8KB/s(Youtube:不良林)
+      - 保加利亚-184.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-298.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-480.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,50 +52,51 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-226.0KB/s(Youtube:不良林)
-      - 波兰-601.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
-      - 波兰-1.21MB/s(Youtube:不良林)
-      - 保加利亚-403.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-310.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-307.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 波兰-219.5KB/s(Youtube:不良林)
+      - 波兰-189.8KB/s(Youtube:不良林)
+      - 保加利亚-184.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-298.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-480.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-226.0KB/s(Youtube:不良林)
-      - 波兰-601.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
-      - 波兰-1.21MB/s(Youtube:不良林)
-      - 保加利亚-403.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-310.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-307.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 波兰-219.5KB/s(Youtube:不良林)
+      - 波兰-189.8KB/s(Youtube:不良林)
+      - 保加利亚-184.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-298.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-480.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-226.0KB/s(Youtube:不良林)
-      - 波兰-601.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
-      - 波兰-1.21MB/s(Youtube:不良林)
-      - 保加利亚-403.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-310.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-307.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 波兰-219.5KB/s(Youtube:不良林)
+      - 波兰-189.8KB/s(Youtube:不良林)
+      - 保加利亚-184.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-298.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-480.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +104,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-226.0KB/s(Youtube:不良林)
-      - 波兰-601.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
-      - 波兰-1.21MB/s(Youtube:不良林)
-      - 保加利亚-403.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-310.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-307.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 波兰-219.5KB/s(Youtube:不良林)
+      - 波兰-189.8KB/s(Youtube:不良林)
+      - 保加利亚-184.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-298.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-480.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +129,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-226.0KB/s(Youtube:不良林)
-      - 波兰-601.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
-      - 波兰-1.21MB/s(Youtube:不良林)
-      - 保加利亚-403.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-310.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-307.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 波兰-219.5KB/s(Youtube:不良林)
+      - 波兰-189.8KB/s(Youtube:不良林)
+      - 保加利亚-184.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-298.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-480.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
