--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-193.5KB/s(Youtube:不良林), server: 213.183.59.229, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇮🇳 印度-3.14MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.89MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇺🇸 美国-3.05MB/s(Youtube:不良林), server: 38.107.226.48, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇬🇧 英国-3.06MB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s3.upyun.online, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-1.64MB/s(Youtube:不良林), server: 213.183.59.211, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇨🇳 中国-9.51MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-207.1KB/s(Youtube:不良林), server: outdoor.starspace.link, port: 443, type: trojan, password: 4brytjljFgnUu3WU, sni: outdoor.starspace.link, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 🇭🇰 香港-6.94MB/s(Youtube:不良林), server: hkaz007.xmrth-node.xyz, port: 15637, type: vmess, uuid: ff51ca4a-6050-3e26-a037-88b0dd62d138, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: hkaz007.xmrth-node.xyz}}
   - {name: 🇺🇸 美国-2.83MB/s(Youtube:不良林), server: 205.185.124.145, port: 85, type: vmess, uuid: 887a1c68-4665-3e74-a911-4e2be6f2e82f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: 205.185.124.145}}
   - {name: 🇺🇸 美国-2.41MB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: 67a329c4-dab1-11ec-ab67-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-193.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-207.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-193.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-207.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-193.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-207.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
@@ -73,11 +73,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-193.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-207.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
@@ -88,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-193.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-207.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
@@ -104,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-193.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-207.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
@@ -129,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-193.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-207.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
