--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇮🇳 印度-3.14MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.89MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-3.05MB/s(Youtube:不良林), server: 38.107.226.48, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-207.1KB/s(Youtube:不良林), server: outdoor.starspace.link, port: 443, type: trojan, password: 4brytjljFgnUu3WU, sni: outdoor.starspace.link, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇭🇰 香港-2.85MB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
+  - {name: 🇺🇸 美国-191.0KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s2.upyun.online, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.02MB/s(Youtube:不良林), server: 38.107.226.48, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇦🇺 澳大利亚-161.5KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.82MB/s(Youtube:不良林), server: 38.107.226.48, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇭🇰 香港-6.94MB/s(Youtube:不良林), server: hkaz007.xmrth-node.xyz, port: 15637, type: vmess, uuid: ff51ca4a-6050-3e26-a037-88b0dd62d138, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: hkaz007.xmrth-node.xyz}}
   - {name: 🇺🇸 美国-2.83MB/s(Youtube:不良林), server: 205.185.124.145, port: 85, type: vmess, uuid: 887a1c68-4665-3e74-a911-4e2be6f2e82f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: 205.185.124.145}}
   - {name: 🇺🇸 美国-2.41MB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: 67a329c4-dab1-11ec-ab67-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-3.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-207.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-191.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-161.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇮🇳 印度-3.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-207.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-191.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-161.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-3.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-207.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-191.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-161.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
@@ -66,6 +66,7 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.85MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.94MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -73,11 +74,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇮🇳 印度-3.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-207.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-191.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-161.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
@@ -88,11 +89,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇮🇳 印度-3.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-207.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-191.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-161.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
@@ -104,11 +105,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-3.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-207.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-191.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-161.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
@@ -129,11 +130,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-3.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-207.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-191.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-161.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
