--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-2.85MB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
-  - {name: 🇺🇸 美国-191.0KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s2.upyun.online, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.02MB/s(Youtube:不良林), server: 38.107.226.48, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇦🇺 澳大利亚-161.5KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.82MB/s(Youtube:不良林), server: 38.107.226.48, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇭🇰 香港-6.94MB/s(Youtube:不良林), server: hkaz007.xmrth-node.xyz, port: 15637, type: vmess, uuid: ff51ca4a-6050-3e26-a037-88b0dd62d138, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: hkaz007.xmrth-node.xyz}}
   - {name: 🇺🇸 美国-2.83MB/s(Youtube:不良林), server: 205.185.124.145, port: 85, type: vmess, uuid: 887a1c68-4665-3e74-a911-4e2be6f2e82f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: 205.185.124.145}}
-  - {name: 🇺🇸 美国-2.41MB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: 67a329c4-dab1-11ec-ab67-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
-  - {name: 🇺🇸 美国-569.7KB/s(Youtube:不良林), server: rooms.starspace.link, port: 443, type: trojan, password: 5HfENR8nt2PR8reH, sni: rooms.starspace.link, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-227.8KB/s(Youtube:不良林), server: 213.183.59.211, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 波兰-1.08MB/s(Youtube:不良林), server: 217.30.10.64, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇺🇸 美国-2.99MB/s(Youtube:不良林), server: 38.107.226.48, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-2.82MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇺🇸 美国-2.64MB/s(Youtube:不良林), server: fhcarm1.gaox.ml, port: 443, type: trojan, password: 05742120-ce23-4cc8-88f5-6d221ce45bf4, sni: fhcarm1.gaox.ml, skip-cert-verify: true}
+  - {name: 波兰-855.0KB/s(Youtube:不良林), server: 217.30.10.64, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 波兰-891.3KB/s(Youtube:不良林), server: 217.30.10.64, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
+  - {name: 波兰-644.1KB/s(Youtube:不良林), server: 217.30.10.64, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 波兰-682.9KB/s(Youtube:不良林), server: 217.30.10.64, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-191.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-161.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-569.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-227.8KB/s(Youtube:不良林)
+      - 波兰-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 波兰-855.0KB/s(Youtube:不良林)
+      - 波兰-891.3KB/s(Youtube:不良林)
+      - 波兰-644.1KB/s(Youtube:不良林)
+      - 波兰-682.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-191.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-161.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-569.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-227.8KB/s(Youtube:不良林)
+      - 波兰-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 波兰-855.0KB/s(Youtube:不良林)
+      - 波兰-891.3KB/s(Youtube:不良林)
+      - 波兰-644.1KB/s(Youtube:不良林)
+      - 波兰-682.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-191.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-161.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-569.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-227.8KB/s(Youtube:不良林)
+      - 波兰-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 波兰-855.0KB/s(Youtube:不良林)
+      - 波兰-891.3KB/s(Youtube:不良林)
+      - 波兰-644.1KB/s(Youtube:不良林)
+      - 波兰-682.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.85MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.94MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-191.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-161.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-569.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-227.8KB/s(Youtube:不良林)
+      - 波兰-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 波兰-855.0KB/s(Youtube:不良林)
+      - 波兰-891.3KB/s(Youtube:不良林)
+      - 波兰-644.1KB/s(Youtube:不良林)
+      - 波兰-682.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-191.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-161.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-569.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-227.8KB/s(Youtube:不良林)
+      - 波兰-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 波兰-855.0KB/s(Youtube:不良林)
+      - 波兰-891.3KB/s(Youtube:不良林)
+      - 波兰-644.1KB/s(Youtube:不良林)
+      - 波兰-682.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-191.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-161.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-569.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-227.8KB/s(Youtube:不良林)
+      - 波兰-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 波兰-855.0KB/s(Youtube:不良林)
+      - 波兰-891.3KB/s(Youtube:不良林)
+      - 波兰-644.1KB/s(Youtube:不良林)
+      - 波兰-682.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-191.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-161.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇭🇰 香港-6.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-569.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-227.8KB/s(Youtube:不良林)
+      - 波兰-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 波兰-855.0KB/s(Youtube:不良林)
+      - 波兰-891.3KB/s(Youtube:不良林)
+      - 波兰-644.1KB/s(Youtube:不良林)
+      - 波兰-682.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
